--- a/src/css/style.css
+++ b/src/css/style.css
@@ -92,8 +92,9 @@ input[type="radio"]:checked + .btn {
   margin: 15px;
   padding: 0px;
   position: relative;
-  border: 1px solid;
+  border: 1px solid #c1c3c7;
   padding: 10px;
+  border-radius: 10px;
 }
 
 .searchProducts img {
