--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -87,8 +87,9 @@ input[type="radio"]:checked + .btn {
   margin: 15px;
   padding: 0px;
   position: relative;
-  border: 1px solid;
+  border: 1px solid #c1c3c7;
   padding: 10px;
+  border-radius: 10px;
 
   img {
     width: 100px;
