--- a/src/css/style.css
+++ b/src/css/style.css
@@ -128,7 +128,6 @@ input[type="radio"]:checked + .btn {
 .products .product {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  min-height: 300px;
   padding: 0;
 }
 
@@ -154,6 +153,7 @@ input[type="radio"]:checked + .btn {
       -ms-flex-pack: justify;
           justify-content: space-between;
   color: #4dc5da;
+  padding: 0 10px;
   opacity: 0.7;
 }
 
