--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -120,7 +120,7 @@ input[type="radio"]:checked + .btn {
 
   .product {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    min-height: 300px;
+    //min-height: 300px;
     padding: 0;
     img {
       height: 200px;
@@ -135,6 +135,7 @@ input[type="radio"]:checked + .btn {
       align-items: center;
       justify-content: space-between;
       color: $light-blue;
+      padding: 0 10px;
       opacity: 0.7;
       &:hover {
         text-decoration: none;
