--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -167,3 +167,9 @@ input[type="radio"]:checked + .btn {
     visibility: hidden;
   }
 }
+
+.loading__button {
+  margin-left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 20px;
+}
